--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<html> 
+  <header> MovilCentro - Solicitud de Desbloqueo </header>
+  <body> Ingresa aquí tu información para solicitar tu desbloqueo </body>
+<div class="cognito">
+<script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
+<script>Cognito.load("forms", { id: "1" });</script>
+</div>
+  
+</html>
