--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <div class="cognito">
 <script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
 <script>Cognito.load("forms", { id: "1" });</script>
-</div>
+	</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+			</ul>
+		</footer>
   
 </html>
