--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html> 
-  <header> MovilCentro - Solicitud de Desbloqueo </header>
+  <head> 
+	  <title> MovilCentro - Solicitud de Desbloqueo </title>
+	<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
   <body> Ingresa aquí tu información para solicitar tu desbloqueo </body>
         <nav>
     		<ul>
