--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:movilcentropr@gmail.com">email</a></li>
+        		<li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
 			</ul>
 		</footer>
   
