--- a/Home/index.html
+++ b/Home/index.html
@@ -7,7 +7,7 @@
   <body> Ingresa aquí tu información para solicitar tu desbloqueo </body>
         <nav>
     		<ul>
-          <li><a href="/">Home</a></li>
+          		<li><a href="/">home</a>Home</li>
         		<li><a href="/desbloqueo">Desbloqueo</a></li>
         		<li><a href="/info">Info</a></li>
     		</ul>
