--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+<!DOCTYPE html>
 <html> 
   <head> 
 	  <title> MovilCentro - Solicitud de Desbloqueo </title>
-	<!-- link to main stylesheet -->
+		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
   <body> Ingresa aquí tu información para solicitar tu desbloqueo </body>
         <nav>
-    		<ul>
-          <li><a href="/">Home</a></li>
+    	<ul>
+          		<li><a href="/">Home</a></li>
         		<li><a href="/desbloqueo">Desbloqueo</a></li>
         		<li><a href="/info">Info</a></li>
-    		</ul>
-		    </nav>
+    	</ul>
+        </nav>
         <div class="cognito">
 <script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
 <script>Cognito.load("forms", { id: "1" });</script>
