--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html> 
   <head> 
 	  <title> MovilCentro - Solicitud de Desbloqueo </title>
-		<!-- link to main stylesheet -->
+	Ingresa aquí tu información para solicitar tu desbloqueo 
+	  <!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
-  <body> Ingresa aquí tu información para solicitar tu desbloqueo </body>
+  <body> 
         <nav>
     	<ul>
           		<li><a href="/">Home</a></li>
@@ -23,5 +24,5 @@
         		<li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
 			</ul>
 		</footer>
-  
+  </body>
 </html>
