--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,7 @@
 	<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
-  <body> Ingresa aquí tu información para solicitar tu desbloqueo </body>
+  <body>  
         <nav>
     		<ul>
           		<li><a href="/">home</a>Home</li>
@@ -18,7 +18,7 @@
         		<li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
 			</ul>
 		</footer>
-  
+  </body>
 </html>
 Contact GitHub API Training Shop Blog About
 © 2017 GitHub, Inc. Terms Privacy Security Status Help
