--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script>Cognito.load("forms", { id: "1" });</script>
 	</div><!-- /.container -->
 		<footer>
+			Para mas información y/o ordenes al por mayor se puede comunicar con nosotros a 
     		<ul>
         		<li><a href="mailto:movilcentropr@gmail.com">email</a></li>
         		<li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
