--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
     </div>
   </div>
 </nav>
+<div class="alert alert-dismissible alert-success">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <strong> Saludos! </strong> Estas a punto de liberar tu equipo Movil!.
+</div>
 	  Ingresa aquí tu información para solicitar tu desbloqueo
         <div class="cognito">
 <script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
