--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		<footer>
 			Para mas información y/o ordenes al por mayor se puede comunicar con nosotros a 
     		<ul>
-        		<li><a href="mailto:movilcentropr@gmail.com">email</a></li>
-        		<li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
+        		<li><a href="mailto:movilcentropr@gmail.com">email</a></li> <li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
+        		
 			</ul>
 		</footer>
   </body>
