--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</div><!-- /.container -->
 		<footer>
   			<ul>
-        		<li><a href="mailto:movilcentropr@gmail.com">email</a></li> <li><a href="https://www.facebook.com/TechParadise">facebook</a></li>
+        		<li><a href="mailto:movilcentropr@gmail.com">email</a></li> <li><a href="https://www.facebook.com/732439013525337">facebook</a></li>
         		
 			</ul>
 		</footer>
