--- a/Blacklist Check/index.html
+++ b/Blacklist Check/index.html
@@ -51,6 +51,13 @@
 <div class="alert alert-dismissible alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <strong> Saludos! </strong> Estas a punto de liberar tu equipo Movil!.
+	  </div> <form action="http://www.imei.info/api/checkimei/" method="POST">
+        Login: <input type="text" name="login" />
+        Password: <input type="password" name="password" />
+        Imei: <input type="text" name="imei" />
+        <button type="submit">GO!</button>
+    </form>
+	  <div>
 </div>
 	  Verifica el status de tu Equipo, Blacklist o si está desbloqueado aquí.
         
