--- a/Blacklist Check/index.html
+++ b/Blacklist Check/index.html
@@ -48,17 +48,7 @@
     </div>
   </div>
 </nav>
-<div class="alert alert-dismissible alert-success">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong> Saludos! </strong> Estas a punto de liberar tu equipo Movil!.
-	  </div> <form action="http://www.imei.info/api/checkimei/" method="POST">
-        Login: <input type="text" name="login" />
-        Password: <input type="password" name="password" />
-        Imei: <input type="text" name="imei" />
-        <button type="submit">GO!</button>
-    </form>
-	  <div>
-</div>
+<div>
 	  Verifica el status de tu Equipo, Blacklist o si está desbloqueado aquí.
         
 				<div align="center" style="margin-top: 18px;">
@@ -72,5 +62,5 @@
         		<li><a href="https://github.com/movilcentro">github.com/movilcentro</a></li>
 			</ul>
 		</footer>
-  </body>
-</html>
+	 <body/>
+<html/>
