--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">MovilCentro</a>
+      <a class="navbar-brand" href="index.html">MovilCentro</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -52,6 +52,9 @@
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <strong> Saludos! </strong> Estas a punto de liberar tu equipo Movil!.
 </div>
+	  <div align="center" style="margin-top: 18px;">
+					
+<div>
 	  
         <div class="cognito">
 <script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
