--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 	</div><!-- /.container -->
 		<footer>
   			<ul>
-        		<li><a href="mailto:movilcentropr@gmail.com">email</a></li> <li><a href="https://www.facebook.com/732439013525337">facebook</a></li>
+				<li><a href="mailto:movilcentropr@gmail.com">email</a></li> </ul> <ul> <li><a href="https://www.facebook.com/732439013525337">facebook</a></li>
         		
 			</ul>
 		</footer>
-  </body>
-</html>
+  <body/>
+<html/>
