--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </nav>
 <div class="alert alert-dismissible alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong> Saludos! </strong> Estas a punto de liberar tu equipo Movil!.
+  <strong> Blacklist Check </strong> Ahora puedes verificar el estado de tu equipo, detectar problemas de icloud, y blacklist!
 </div>
 	  <div align="center" style="margin-top: 18px;">
 					
