--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="Blacklist Check">Blacklist Check<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Store</a></li>
+        <li class="active"><a href="desbloqueo"> Desbloqueo <span class="sr-only">(current)</span></a></li>
+        <li><a href="Blacklist Check">Estado de Activación</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -50,7 +50,7 @@
 </nav>
 <div class="alert alert-dismissible alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong> Blacklist Check </strong> Ahora puedes verificar el estado de tu equipo, detectar problemas de icloud, y blacklist!
+  <strong> Blacklist Check </strong> Ahora puedes verificar el estado de tu equipo, detectar problemas de icloud, y blacklist totalmente GRATIS!
 </div>
 	  <div align="center" style="margin-top: 18px;">
 					
@@ -61,10 +61,11 @@
 <script>Cognito.load("forms", { id: "1" });</script>
 	</div><!-- /.container -->
 		<footer>
-  			<ul>
-				<li><a href="mailto:movilcentropr@gmail.com">email</a></li> </ul> <ul> <li><a href="https://www.facebook.com/732439013525337">facebook</a></li>
+  			<div
+	<li><a href="mailto:movilcentropr@gmail.com">Contacto</a></li> 
+	<li><a href="https://www.facebook.com/732439013525337">Facebook</a></li>
         		
-			</ul>
-		</footer>
+			<div>
+		<footer/>
   <body/>
 <html/>
