--- a/index.html
+++ b/index.html
@@ -55,14 +55,10 @@
 	  <div align="center" style="margin-top: 18px;">
 					
 <div>
-	  
-        <div class="cognito">
-<script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
-<script>Cognito.load("forms", { id: "1" });</script>
-	</div><!-- /.container -->
+	
 		<footer>
   			<div
-	<li><a href="mailto:movilcentropr@gmail.com">Contacto</a></li> 
+	<li><a href="mailto:movilcentropr@gmail.com">Contacto</a><li/> 
 	<li><a href="https://www.facebook.com/732439013525337">Facebook</a></li>
         		<div>
 		<footer/>
