--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/index.html">MovilCentro</a>
+      <a class="navbar-brand" href="index.html">MovilCentro</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -55,10 +55,14 @@
 	  <div align="center" style="margin-top: 18px;">
 					
 <div>
-	
+	  
+        <div class="cognito">
+<script src="https://services.cognitoforms.com/s/D0fKCUsrW0C3XEU97s6Nww"></script>
+<script>Cognito.load("forms", { id: "1" });</script>
+	</div><!-- /.container -->
 		<footer>
   			<div
-	<li><a href="mailto:movilcentropr@gmail.com">Contacto</a><li/> 
+	<li><a href="mailto:movilcentropr@gmail.com">Contacto</a></li> 
 	<li><a href="https://www.facebook.com/732439013525337">Facebook</a></li>
         		<div>
 		<footer/>
