--- a/desbloqueo/index.html
+++ b/desbloqueo/index.html
@@ -16,12 +16,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index">MovilCentro</a>
+      <a class="navbar-brand" href="~/index.html">MovilCentro</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/desbloqueo/index.html"> Desbloqueo <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="desbloqueo"> Desbloqueo <span class="sr-only">(current)</span></a></li>
         <li><a href="Blacklist Check">Estado de Activación</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
