--- a/desbloqueo/index.html
+++ b/desbloqueo/index.html
@@ -21,7 +21,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="desbloqueo"> Desbloqueo <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="./index.html"> Desbloqueo <span class="sr-only">(current)</span></a></li>
         <li><a href="Blacklist Check">Estado de Activación</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
