--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 </nav>
 <div class="alert alert-dismissible alert-success">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <button> type="button" class="close" data-dismiss="alert">&times;</button>
   <strong> Blacklist Check </strong> Ahora puedes verificar el estado de tu equipo, detectar problemas de icloud, y blacklist totalmente GRATIS!
 </div>
 	  				<div align="center" style="margin-top: 18px;">
