--- a/index.html
+++ b/index.html
@@ -48,16 +48,11 @@
     </div>
   </div>
 </nav>
-<div class="alert alert-dismissible role=alert-success">
+<div class="alert alert-dismissible alert-success">
   <button type="button" class="close" data-dismiss="alert">&times;</button>
   <strong> Blacklist Check </strong> Ahora puedes verificar el estado de tu equipo, detectar problemas de icloud, y blacklist totalmente GRATIS!
 </div>
-	  <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-</div>
+	 
 	  				<div align="center" style="margin-top: 18px;">
 					
 <div>
