--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <strong> Blacklist Check </strong> Ahora puedes verificar el estado de tu equipo, detectar problemas de icloud, y blacklist totalmente GRATIS!
 </div>
 	  
-	  <img src="/iphone.jpg" width="768">
+	  <img src="iphone.jpg" width="768">
 	 
 	  				<div align="center" style="margin-top: 18px;">
 					
