--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 	  
 	  <div align="center" style="margin-top: 18px;">
 	  <img src="iphone.jpg" width="768">
+		  
+		  <div class="jumbotron">
+  <h1>El Nuevo iPhone 7 Plus</h1>
+  <p> Ahora puedes liberar tu Apple™ iPhone para ser utilizado en la compañía preferida! </p>
+  <p><a class="btn btn-primary btn-lg">Lee más</a></p>
+</div>
 	 
 	  						
 <div>
