--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 		  
 		  <div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
-  <p> Ahora puedes liberar tu Apple™ iPhone para ser utilizado en la compañía preferida! </p>
-  <p><a class="btn btn-primary btn-lg">Lee más</a></p>
-</div>
+  <p> Ahora puedes liberar tu Apple™ iPhone para ser utilizado en tu compañía preferida! </p>
+			  <a class="btn btn-primary btn-lg"><li><a href="desbloqueo">Lee más</a>
+<div/>
+		 
 	 
 	  						
 <div>
