--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		  <div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
   <p> Ahora puedes liberar tu Apple™ iPhone para ser utilizado en tu compañía preferida! </p>
-			  <a class="btn btn-primary btn-lg"><li><a href="desbloqueo">Lee más</a>
+      <a class="btn btn-primary btn-lg"> <a href="desbloqueo">Lee más</a>
 <div/>
 		 
 	 
