--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 	  
 	  <div align="center" style="margin-top: 18px;">
-	  <img src="iphone.jpg" width="768">
+	  <img src="js-image-slider.js" width="768">
 		  
 		<div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
