--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
   <body>
+	  <!--FACEBOOKAPI-->
+
+	  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.8&appId=223614221026485";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+	  <!-- NAV BAR -->
         <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
