--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
+		<div class="fb-login-button" data-max-rows="3" data-size="medium" data-show-faces="true" data-auto-logout-link="false"></div>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
