--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
-	<div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div>
+
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      <div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div>
+	    </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Sobre Nosotros</a></li>
       </ul>
@@ -66,7 +67,7 @@
 </div>
 	  
 	  <div align="center" style="margin-top: 18px;">
-	  <img src="js-image-slider.js" width="768">
+	  <img src="iphone.jpg" width="768">
 		  
 		<div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
