--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div>
 	    </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Sobre Nosotros</a></li>
+        <li><a href="About">Contacto</a></li>
       </ul>
     </div>
   </div>
