--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
   <body>
+	  
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '145566029288387',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();   
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
 	  <!--FACEBOOKAPI-->
 
 	  <div id="fb-root"></div>
