--- a/desbloqueo/index.html
+++ b/desbloqueo/index.html
@@ -7,6 +7,26 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
   <body>
+	  
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '145566029288387',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v2.8'
+    });
+    FB.AppEvents.logPageView();   
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
         <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -43,7 +63,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="About">Contacto</a></li>
       </ul>
     </div>
   </div>
