--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      <div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="true"></div>
+      <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
 	    </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="About">Contacto</a></li>
