--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
 	  <div align="center" style="margin-top: 18px;">
 	  <img src="iphone.jpg" width="768">
 		  
-		<div class="jumbotron">
+		  <div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
   <p>Ahora puedes liberar tu Apple™ iPhone para ser utilizado en tu compañía preferida!</p>
-			<p><a class="btn btn-primary btn-lg"<a> <li><a href="desbloqueo"</a></li>Lee más</a></p>
+  <p><a class="btn btn-primary btn-lg">Lee Más</a></p>
+</div>
+		
 </div>
 		 
 	 
