--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 		  
 		  <div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
-  <p>Ahora puedes liberar tu Apple™ iPhone para ser utilizado en tu compañía preferida!</p>
+  <p>Ahora puedes liberar tu Apple™ iPhone para ser utilizado en tu compañía preferida</p>
+			  <p>Totalmente en Linea! </p>
   <p><a class="btn btn-primary btn-lg">Lee Más</a></p>
 </div>
 		
