--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
 		  
 		  <div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
-  <p>Ahora puedes liberar tu Apple™ iPhone para ser utilizado en tu compañía preferida</p>
-			  <p>Totalmente en Linea! </p>
-  <p><a class="btn btn-primary btn-lg">Lee Más</a></p>
+  <p>Ahora puedes liberar tu Apple™ iPhone totalmente en linea.</p>
+			  <p> <a href="desbloqueo" <button type="button" class="btn btn-link">Link</button> </p>
 </div>
 		
 </div>
