--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		  <div class="jumbotron">
   <h1>El Nuevo iPhone 7 Plus</h1>
   <p>Ahora puedes liberar tu Apple™ iPhone totalmente en linea.</p>
-			  <p> <a href="desbloqueo" <button type="button" class="btn btn-link">Link</button> </p>
+			  <a class="btn btn-primary" href="desbloqueo" role="button">Link</a>
 </div>
 		
 </div>
