--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 <div>
 	<footer>
   			<div
-	<li><a href="mailto:movilcentropr@gmail.com">Contacto</a></li> 
-	<li><a href="https://www.facebook.com/732439013525337">Facebook</a></li>
+	href="mailto:movilcentropr@gmail.com">Contacto</a>
+       <a href="https://www.facebook.com/732439013525337">Facebook</a>
         		<div>
 		<footer/>
   <body/>
