--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>Últimos Estrenos</h2>
+                <p> Subscribete al canal de Spotify // Para las últimas noticias relacionadas a <a href="spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO"> TrapCartel.</a>. Corriente </p>
+                <p>Subscribete al canal de YouTube del <a href="https://www.youtube.com/channel/UCedKMitCYfmf_PPbisS3idA">TrapCartel</a></p>
              </div>
             <iframe src="https://embed.spotify.com/?uri=spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO" width="720" height="580" frameborder="0" allowtransparency="true"></iframe>
         </div>
