--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Últimos Estrenos</h2>
-                <p> Subscribete al canal de Spotify // Para las últimas noticias relacionadas a <a href="spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO"> TrapCartel.</a>. Corriente </p>
+                <p> Subscribete al canal de <a href="spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO"> TrapCartel </a> en Spotify. Corriente </p>
                 <p>Subscribete al canal de YouTube del <a href="https://www.youtube.com/channel/UCedKMitCYfmf_PPbisS3idA">TrapCartel</a></p>
              </div>
             <iframe src="https://embed.spotify.com/?uri=spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO" width="720" height="580" frameborder="0" allowtransparency="true"></iframe>
