--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">TRAPCARTEL</h1>
+                        <h1 class="brand-heading"></h1>
                         <p class="intro-text">DISPONIBLE PRONTO EN FORMATO DIGITAL 
                             <br>01/01/7000</p>
                         <a href="#about" class="btn btn-circle page-scroll">
