--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">01/01/7000</h1>
                         <p class="intro-text">DISPONIBLE PRONTO EN FORMATO DIGITAL 
-                            <br><img src="http://static.wixstatic.com/media/3a15a0_d70e3e8b31c94bbfa5382ecd9b0e3870.png" alt="Spotify">style="width:128px;height:128px;"</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                            <br><img src="http://static.wixstatic.com/media/3a15a0_d70e3e8b31c94bbfa5382ecd9b0e3870.png" alt="Spotify" style="width:128px;height:128px;" </p>
+                       <img src="http://static.wixstatic.com/media/3a15a0_d70e3e8b31c94bbfa5382ecd9b0e3870.png" alt="Spotify" width="128" height="128"> 
+                            <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
