--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                         <h1 class="brand-heading">01/01/7000</h1>
                         <p class="intro-text">DISPONIBLE PRONTO EN FORMATO DIGITAL 
                             <br><img src="http://static.wixstatic.com/media/3a15a0_d70e3e8b31c94bbfa5382ecd9b0e3870.png" alt="Spotify" style="width:128px;height:128px;" </p>
-                       <img src="http://static.wixstatic.com/media/3a15a0_d70e3e8b31c94bbfa5382ecd9b0e3870.png" alt="Spotify" width="128" height="128"> 
                             <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -92,7 +91,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Últimos Estrenos</h2>
-                <p> <i class="em em-zap"></i>Subscribete al canal de <a href="spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO"> TrapCartel </a> en Spotify. Corriente <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet"> <i class="em em-zap"></i> </p>
+                <p> <i class="em em-zap"></i>Subscribete al canal de <a href="spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO"> TrapCartel </a> en Spotify <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet"> <i class="em em-zap"></i> </p>
                 <p>Subscribete al canal de YouTube del <a href="https://www.youtube.com/channel/UCedKMitCYfmf_PPbisS3idA">TrapCartel</a></p>
              </div>
             <iframe src="https://embed.spotify.com/?uri=spotify:artist:3Ia6QnB1tPR9bcgnmbL5FO" width="720" height="580" frameborder="0" allowtransparency="true"></iframe>
